Make course list page numbers fixed width and wrap with overflow

--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -49,14 +49,15 @@
 }
 
 .reactable-page-button {
-  padding: 5px 7px;
-  width: 30px;
-  cursor: pointer;
-  color: #000;
+  border-bottom: 1px solid #aaa;
   border-left: 1px solid #aaa;
   border-top: 1px solid #aaa;
-  border-bottom: 1px solid #aaa;
+  color: #000;
+  cursor: pointer;
+  display: inline-block;
+  padding: 5px 0;
   text-align: center;
+  width: 25px;
 }
 
 .reactable-page-button:first-child {
